--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TYAqiono</title>
+    <title>TYAquino</title>
 </head>
 <body>
     
+    <p>Make a change</p>
+
 </body>
 </html>
